fix: immutable collection to mutuable and set authorities in UsernamePasswordAuthenticationToken